2009-09-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/print_layout/canvas_print_layout.cc:
	* glom/utility_widgets/imageglom.cc: Fix the build when -fno-exceptions 
	is used.

2009-09-05  Murray Cumming  <murrayc@murrayc.com>

	Added dlopen test of the python library.

	* glom/libglom/test_connectionpool.cc:
	* glom/libglom/test_document.cc: Fixed the build without exceptions.
	* Makefile_tests.am: Added test_load_python_library, using dlopen() 
	to show the numpunct linker error (bug #594142) without actually using 
	python.

2009-09-04  Daniel Elstner  <daniel.kitta@gmail.com>

	Do not try to catch non-existing MetaStructError

	* glom/base_db.cc (Base_DB::get_fields_for_table_from_database):
	For now, catch Glib::Error instead of Gnome::Gda::MetaStructError,
	which does not exist.

2009-09-04  Murray Cumming  <murrayc@murrayc.com>

	Avoid compiler warnings.

	* configure.ac: Add a comment about using the PYTHON environment 
	variable to specify the python version.
	* glom/dialog_existing_or_new.cc:
	* glom/dialog_import_csv_progress.cc:
	* glom/utility_widgets/canvas/canvas_group_resizable.cc: Avoid some 
	compiler warnings, mostly about missing returns in unlikely 
	situations.

2009-09-04  Murray Cumming  <murrayc@murrayc.com>

	Mention the failed python module name on stdcerr.

	* glom/python_embed/glom_python.cc: glom_python_module_is_available(), 
	gda_python_module_is_available(): Output a hint to the command-line too, 
	in case maemo crashes when showing UI as mine does at the moment, 	
	and to mention the exact python module name that failed.

2009-09-04  Murray Cumming  <murrayc@murrayc.com>

	Fix the client-only non-maemo build on maemo.

	* configure.ac: Correct the AS_IF() calls so that we really do not 
	need iso-codes in client-only mode.
	* glom/print_layout/canvas_layout_item.cc:
	* glom/print_layout/canvas_print_layout.cc:
	* glom/printoperation_printlayout.cc: Fix the build without 